--- a/hhhhh.html
+++ b/hhhhh.html
@@ -11,5 +11,6 @@
     <p>git add .</p>
     <p>git commit -m "your meaningful commit massage"</p>
     <p>git push</p>
+    <img src="images/SHG00920.jpg" alt="">
 </body>
 </html>
